# casimir-mems-geometry

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/raw/banishev_2013/: digitized_curve.csv  metadata.yaml  sentinels.yaml
data/raw/bao_2010/: digitized_curve.csv  metadata.yaml  sentinels.yaml
data/raw/chan_2008/: digitized_curve.csv  metadata.yaml  sentinels.yaml
data/raw/levelc_c0_sinusoid/: metadata.yaml
data/raw/levelc_c10_scattmin_a03/: metadata.yaml
data/raw/levelc_c11_scattmin_sweep256/: metadata.yaml
data/raw/levelc_c12_dualharm_phi0/: metadata.yaml
data/raw/levelc_c13_dualharm_phi90/: metadata.yaml
data/raw/levelc_c14_dualharm_phi180/: metadata.yaml
data/raw/levelc_c1_sinusoid_a01/: metadata.yaml
data/raw/levelc_c2_sinusoid_a03/: metadata.yaml
data/raw/levelc_c3_sinusoid_sweep256/: metadata.yaml
data/raw/levelc_c4_backend_v1/: metadata.yaml
data/raw/levelc_c4_idealpert_canonical/: metadata.yaml
data/raw/levelc_c4_sinusoid_idealperturb/: metadata.yaml
data/raw/levelc_c5_idealpert_a01/: metadata.yaml
data/raw/levelc_c6_idealpert_a03/: metadata.yaml
data/raw/levelc_c7_idealpert_sweep256/: metadata.yaml
data/raw/levelc_c8_scattmin_canonical/: metadata.yaml
data/raw/levelc_c9_scattmin_a01/: metadata.yaml
experiments/: optimize_geometry.py  reproduce_banishev_2013.py  reproduce_bao_2010.py  reproduce_chan_2008.py  reproduce_levelC_c0_sinusoid.py  reproduce_levelC_case.py  sweep_geometry.py
src/casimir_mems/: types.py
tools/: inspect_levelc_scattmin.sh  repro.sh  smoke_levelA.py
(+20 files in other folders)
